--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<app-nx-welcome></app-nx-welcome> <router-outlet></router-outlet>
+<app-navigation></app-navigation>
+<router-outlet></router-outlet>
