--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,7 @@
 @import "primeicons/primeicons.css";
 @import 'ag-grid-community/styles/ag-grid.css';
 @import 'ag-grid-community/styles/ag-theme-alpine.css';
+
+body {
+  margin: 0;
+}
