--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <app-navigation></app-navigation>
-<router-outlet></router-outlet>
+<div id="content-wrapper">
+  <router-outlet></router-outlet>
+</div>
